--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,8 @@ tzdata==2025.1
 urllib3==2.3.0
 
 # Machine Learning and Data Processing
-tensorflow>=2.12.0
-scikit-learn>=1.3.0
+tensorflow==2.12.0
+scikit-learn==1.3.0
 joblib>=1.3.2
 
 # Additional dependencies required by code
